# BackEnd/handlers/user_handler.go
@@ -4,6 +4,7 @@ import (
 	"database/sql"
 	"demo/database"
 	"demo/models"
+	"demo/utils"
 	"log"
 	"net/http"
 
@@ -128,4 +129,104 @@ func SignIn(c *gin.Context) {
 			"userId": storedUser.ID.String(),
 		},
 	})
+}
+
+// @Summary Get Profile
+// @Description Get user data
+// @Tags Profile
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]string
+// @Failure 401 {object} map[string]string
+// @Router /Profile/get-profile [get]
+func Get_profile(c *gin.Context) {
+	tokenString := c.GetHeader("Authorization")
+	if tokenString == "" {
+		c.JSON(http.StatusUnauthorized, gin.H{"status": "error", "message": "Missing token"})
+		return
+	}
+	claim, err := utils.ValidateToken(tokenString)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"status": "error", "message": "Invalid token"})
+		return
+	}
+	userId := claim.Subject
+
+	query := `SELECT id, name, email, image FROM Users WHERE id = ?`
+	var id, name, email, image string
+	err = database.DB.QueryRow(query, userId).Scan(&id, &name, &email, &image)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			c.JSON(http.StatusNotFound, gin.H{"status": "error", "message": "User not found"})
+		} else {
+			c.JSON(http.StatusInternalServerError, gin.H{"status": "error", "message": "Error fetching user profile"})
+		}
+		return
+	}
+
+	var userItemsCount, userRentalItemsCount int
+	err = database.DB.QueryRow(`SELECT COUNT(*) FROM items WHERE UserID = ?`, userId).Scan(&userItemsCount)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"status": "error", "message": "Error fetching user items count"})
+		return
+	}
+
+	err = database.DB.QueryRow(`SELECT COUNT(*) FROM rental WHERE user_id = ?`, userId).Scan(&userRentalItemsCount)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"status": "error", "message": "Error fetching user rental items count"})
+		return
+	}
+
+	data := map[string]interface{}{
+		"id":                   id,
+		"name":                 name,
+		"email":                email,
+		"image":                image,
+		"userItemsCount":       userItemsCount,
+		"userRentalItemsCount": userRentalItemsCount,
+	}
+	c.JSON(http.StatusOK, gin.H{"status": "success", "data": data})
+}
+
+// @Summary Update user profile
+// @Description Update the profile of the authenticated user
+// @Tags Profile
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param profile body models.UpdateProfileRequest true "Profile data"
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Failure 401 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /Profile/update-profile [put]
+func UpdateProfile(c *gin.Context) {
+	tokenString := c.GetHeader("Authorization")
+	if tokenString == "" {
+		c.JSON(http.StatusUnauthorized, gin.H{"status": "error", "message": "Missing token"})
+		return
+	}
+	claim, err := utils.ValidateToken(tokenString)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"status": "error", "message": "Invalid token"})
+		return
+	}
+	userId := claim.Subject
+
+	var req models.UpdateProfileRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"status": "error", "message": "Invalid request"})
+		return
+	}
+
+	query := `UPDATE Users SET name = ?, email = ?, image = ? WHERE id = ?`
+	_, err = database.DB.Exec(query, req.Name, req.Email, req.Image, userId)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"status": "error", "message": "Error updating user profile"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"status": "success", "message": "Profile updated successfully"})
 }
